testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket/case13.expect.out
error: expected '}', found '1'
  ==> case13.cj:16:28:
   | 
16 | \n cangjie2 ${ "\u{1232114212324"
   |                   ~        ^ expected '}'
   |                   |
   |                   to match this opening '{'
   | 
   # note: unicode escape may contain 8 hexadecimal digits at most

1 error generated, 1 error printed.
